<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iot_shadow_service</name>
  <version>1.0.0</version>
  <description>Connect to IoT Shadow to publish updates and provide service call interaction</description>
  <maintainer email="veloute.de.jonquille@gmail.com">ynyBonfennil</maintainer>
  <license>MIT-0</license>

  <depend>aws_sdk_cpp_vendor</depend>
  <depend>iot_shadow_service_msgs</depend>
  <depend>nlohmann_json</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>